--- a/src/scripts/data/assets/github/uncategorized.yaml
+++ b/src/scripts/data/assets/github/uncategorized.yaml
@@ -407,7 +407,7 @@ assets:
     authors:
       - '0xC0000054'
     buildings:
-      Census Repository v3.5 Patch\RJ - Census_Repository_Model_and_Query_3.1.dat:
+      Census Repository v3.5 Patch/RJ - Census_Repository_Model_and_Query_3.1.dat:
         0dd41d65:
           bulldoze: 100
           categories: rewards
@@ -519,15 +519,15 @@ assets:
     download: https://github.com/0xC0000054/sc4-more-demand-info/releases/download/v{version}/SC4MoreDemandInfo.zip
     file: SC4MoreDemandInfo.zip
     files:
-      - Census Repository v3.5 Patch\RJ - Census_Repository_Model_and_Query_3.1.dat
-      - Dll\LICENSE.txt
-      - Dll\README.txt
-      - Dll\SC4MoreDemandInfo.dll
-      - Dll\Third Party Notices.txt
+      - Census Repository v3.5 Patch/RJ - Census_Repository_Model_and_Query_3.1.dat
+      - Dll/LICENSE.txt
+      - Dll/README.txt
+      - Dll/SC4MoreDemandInfo.dll
+      - Dll/Third Party Notices.txt
       - Readme.txt
     lastModified: 2024-11-18T09:48:18.355Z
     lots:
-      Census Repository v3.5 Patch\RJ - Census_Repository_Model_and_Query_3.1.dat:
+      Census Repository v3.5 Patch/RJ - Census_Repository_Model_and_Query_3.1.dat:
         0dd41d65:
           building: 0dd41d65
           name: CensusRepository
@@ -551,7 +551,7 @@ assets:
       timestamp: 2024-12-02T12:44:08.441Z
       version: 1
     props:
-      Census Repository v3.5 Patch\RJ - Census_Repository_Model_and_Query_3.1.dat:
+      Census Repository v3.5 Patch/RJ - Census_Repository_Model_and_Query_3.1.dat:
         16888cf8:
           model: 5ad0e817-5465811a-00030000
           name: Census Repository Facility
@@ -777,7 +777,7 @@ assets:
     authors:
       - memo33
     buildings:
-      submenus\park\plaza-submenu.dat:
+      submenus/park/plaza-submenu.dat:
         ea8756cf:
           bulldoze: 20
           cost: 170
@@ -877,58 +877,58 @@ assets:
       - README.md
       - Third Party Notices.txt
       - memo.submenus.dll
-      - submenus\commercial\ploppable-CO$$$-submenu.dat
-      - submenus\commercial\ploppable-CO$$-submenu.dat
-      - submenus\commercial\ploppable-CS$$$-submenu.dat
-      - submenus\commercial\ploppable-CS$$-submenu.dat
-      - submenus\commercial\ploppable-CS$-submenu.dat
-      - submenus\education\college-submenu.dat
-      - submenus\education\elementary-school-submenu.dat
-      - submenus\education\high-school-submenu.dat
-      - submenus\education\library-museum-submenu.dat
-      - submenus\health\health-large-submenu.dat
-      - submenus\health\health-medium-submenu.dat
-      - submenus\health\health-small-submenu.dat
-      - submenus\highway\signage-submenu.dat
-      - submenus\industrial\ploppable-Ia-submenu.dat
-      - submenus\industrial\ploppable-Id-submenu.dat
-      - submenus\industrial\ploppable-Iht-submenu.dat
-      - submenus\industrial\ploppable-Im-submenu.dat
-      - submenus\landmark\entertainment-submenu.dat
-      - submenus\landmark\government-submenu.dat
-      - submenus\landmark\religion-submenu.dat
-      - submenus\misc-transit\ElRail-submenu.dat
-      - submenus\misc-transit\GLR-submenu.dat
-      - submenus\misc-transit\bus-submenu.dat
-      - submenus\misc-transit\multimodal-stations-submenu.dat
-      - submenus\misc-transit\parking-submenu.dat
-      - submenus\misc-transit\subway-submenu.dat
-      - submenus\park\embankment-submenu.dat
-      - submenus\park\fillers-submenu.dat
-      - submenus\park\green-spaces-submenu.dat
-      - submenus\park\modular-parks-submenu.dat
-      - submenus\park\plaza-submenu.dat
-      - submenus\park\sports-submenu.dat
-      - submenus\police\military-submenu.dat
-      - submenus\police\police-deluxe-submenu.dat
-      - submenus\police\police-large-submenu.dat
-      - submenus\police\police-small-submenu.dat
-      - submenus\power\clean-energy-submenu.dat
-      - submenus\power\dirty-energy-submenu.dat
-      - submenus\power\misc-power-submenu.dat
-      - submenus\rail\freight-rail-submenu.dat
-      - submenus\rail\hybrid-railway-submenu.dat
-      - submenus\rail\monorail-submenu.dat
-      - submenus\rail\passenger-rail-submenu.dat
-      - submenus\rail\yards-submenu.dat
-      - submenus\residential\ploppable-R$$$-submenu.dat
-      - submenus\residential\ploppable-R$$-submenu.dat
-      - submenus\residential\ploppable-R$-submenu.dat
-      - submenus\submenu-essentials.dat
-      - submenus\water-transit\canal-submenu.dat
-      - submenus\water-transit\ports-ferries-submenu.dat
-      - submenus\water-transit\seawall-submenu.dat
-      - submenus\water-transit\waterfront-submenu.dat
+      - submenus/commercial/ploppable-CO$$$-submenu.dat
+      - submenus/commercial/ploppable-CO$$-submenu.dat
+      - submenus/commercial/ploppable-CS$$$-submenu.dat
+      - submenus/commercial/ploppable-CS$$-submenu.dat
+      - submenus/commercial/ploppable-CS$-submenu.dat
+      - submenus/education/college-submenu.dat
+      - submenus/education/elementary-school-submenu.dat
+      - submenus/education/high-school-submenu.dat
+      - submenus/education/library-museum-submenu.dat
+      - submenus/health/health-large-submenu.dat
+      - submenus/health/health-medium-submenu.dat
+      - submenus/health/health-small-submenu.dat
+      - submenus/highway/signage-submenu.dat
+      - submenus/industrial/ploppable-Ia-submenu.dat
+      - submenus/industrial/ploppable-Id-submenu.dat
+      - submenus/industrial/ploppable-Iht-submenu.dat
+      - submenus/industrial/ploppable-Im-submenu.dat
+      - submenus/landmark/entertainment-submenu.dat
+      - submenus/landmark/government-submenu.dat
+      - submenus/landmark/religion-submenu.dat
+      - submenus/misc-transit/ElRail-submenu.dat
+      - submenus/misc-transit/GLR-submenu.dat
+      - submenus/misc-transit/bus-submenu.dat
+      - submenus/misc-transit/multimodal-stations-submenu.dat
+      - submenus/misc-transit/parking-submenu.dat
+      - submenus/misc-transit/subway-submenu.dat
+      - submenus/park/embankment-submenu.dat
+      - submenus/park/fillers-submenu.dat
+      - submenus/park/green-spaces-submenu.dat
+      - submenus/park/modular-parks-submenu.dat
+      - submenus/park/plaza-submenu.dat
+      - submenus/park/sports-submenu.dat
+      - submenus/police/military-submenu.dat
+      - submenus/police/police-deluxe-submenu.dat
+      - submenus/police/police-large-submenu.dat
+      - submenus/police/police-small-submenu.dat
+      - submenus/power/clean-energy-submenu.dat
+      - submenus/power/dirty-energy-submenu.dat
+      - submenus/power/misc-power-submenu.dat
+      - submenus/rail/freight-rail-submenu.dat
+      - submenus/rail/hybrid-railway-submenu.dat
+      - submenus/rail/monorail-submenu.dat
+      - submenus/rail/passenger-rail-submenu.dat
+      - submenus/rail/yards-submenu.dat
+      - submenus/residential/ploppable-R$$$-submenu.dat
+      - submenus/residential/ploppable-R$$-submenu.dat
+      - submenus/residential/ploppable-R$-submenu.dat
+      - submenus/submenu-essentials.dat
+      - submenus/water-transit/canal-submenu.dat
+      - submenus/water-transit/ports-ferries-submenu.dat
+      - submenus/water-transit/seawall-submenu.dat
+      - submenus/water-transit/waterfront-submenu.dat
     lastModified: 2024-11-18T09:48:18.355Z
     meta:
       timestamp: 2024-12-02T12:44:08.441Z
