--- a/src/scripts/data/assets/sc4evermore/20-ploppable.yaml
+++ b/src/scripts/data/assets/sc4evermore/20-ploppable.yaml
@@ -4,7 +4,7 @@ assets:
     authors:
       - Jeronij
     buildings:
-      Jeronij\JRJ Ships Compilation\JRJ Maritime Toyama Blue\JRJ Toyama3 blue Full_30c05b68.SC4Lot:
+      Jeronij/JRJ Ships Compilation/JRJ Maritime Toyama Blue/JRJ Toyama3 blue Full_30c05b68.SC4Lot:
         30c05b68:
           bulldoze: 5
           categories: landmarks
@@ -24,7 +24,7 @@ assets:
           water: 5
           waterPollution: 1
           waterPollutionRadius: 1
-      Jeronij\JRJ Ships Compilation\JRJ Maritime Toyama Blue\JRJ Toyama3 blue_d0bf13e3.SC4Lot:
+      Jeronij/JRJ Ships Compilation/JRJ Maritime Toyama Blue/JRJ Toyama3 blue_d0bf13e3.SC4Lot:
         d0bf13e3:
           bulldoze: 5
           categories: landmarks
@@ -44,7 +44,7 @@ assets:
           water: 5
           waterPollution: 1
           waterPollutionRadius: 1
-      Jeronij\JRJ Ships Compilation\JRJ Maritime Toyama Green\JRJ Toyama3 Green Full_30c052e8.SC4Lot:
+      Jeronij/JRJ Ships Compilation/JRJ Maritime Toyama Green/JRJ Toyama3 Green Full_30c052e8.SC4Lot:
         30c052e8:
           bulldoze: 5
           categories: landmarks
@@ -64,7 +64,7 @@ assets:
           water: 5
           waterPollution: 1
           waterPollutionRadius: 1
-      Jeronij\JRJ Ships Compilation\JRJ Maritime Toyama Green\JRJ Toyama3 Green_f0bf0dab.SC4Lot:
+      Jeronij/JRJ Ships Compilation/JRJ Maritime Toyama Green/JRJ Toyama3 Green_f0bf0dab.SC4Lot:
         f0bf0dab:
           bulldoze: 5
           categories: landmarks
@@ -84,7 +84,7 @@ assets:
           water: 5
           waterPollution: 1
           waterPollutionRadius: 1
-      Jeronij\JRJ Ships Compilation\JRJ Maritime Toyama Red\JRJ Toyama3 red Full_d0c05314.SC4Lot:
+      Jeronij/JRJ Ships Compilation/JRJ Maritime Toyama Red/JRJ Toyama3 red Full_d0c05314.SC4Lot:
         d0c05314:
           bulldoze: 5
           categories: landmarks
@@ -104,7 +104,7 @@ assets:
           water: 5
           waterPollution: 1
           waterPollutionRadius: 1
-      Jeronij\JRJ Ships Compilation\JRJ Maritime Toyama Red\JRJ Toyama3 red_d0bf0a44.SC4Lot:
+      Jeronij/JRJ Ships Compilation/JRJ Maritime Toyama Red/JRJ Toyama3 red_d0bf0a44.SC4Lot:
         d0bf0a44:
           bulldoze: 5
           categories: landmarks
@@ -124,7 +124,7 @@ assets:
           water: 5
           waterPollution: 1
           waterPollutionRadius: 1
-      Jeronij\JRJ Ships Compilation\JRJ Maritime Toyama Yellow\JRJ Toyama3 yellow Full_f0c045df.SC4Lot:
+      Jeronij/JRJ Ships Compilation/JRJ Maritime Toyama Yellow/JRJ Toyama3 yellow Full_f0c045df.SC4Lot:
         f0c045df:
           bulldoze: 5
           categories: landmarks
@@ -144,7 +144,7 @@ assets:
           water: 5
           waterPollution: 1
           waterPollutionRadius: 1
-      Jeronij\JRJ Ships Compilation\JRJ Maritime Toyama Yellow\JRJ Toyama3 yellow_d0bf0413.SC4Lot:
+      Jeronij/JRJ Ships Compilation/JRJ Maritime Toyama Yellow/JRJ Toyama3 yellow_d0bf0413.SC4Lot:
         d0bf0413:
           bulldoze: 5
           categories: landmarks
@@ -164,7 +164,7 @@ assets:
           water: 5
           waterPollution: 1
           waterPollutionRadius: 1
-      Jeronij\JRJ Ships Compilation\Juan J. Sister\JRJ Sister_90be0bd3.SC4Lot:
+      Jeronij/JRJ Ships Compilation/Juan J. Sister/JRJ Sister_90be0bd3.SC4Lot:
         90be0bd3:
           bulldoze: 5
           categories: landmarks
@@ -184,7 +184,7 @@ assets:
           water: 5
           waterPollution: 1
           waterPollutionRadius: 1
-      Jeronij\JRJ Ships Compilation\Ned Lloyd\JRJ Nedlloyd01_90c1db9e.SC4Lot:
+      Jeronij/JRJ Ships Compilation/Ned Lloyd/JRJ Nedlloyd01_90c1db9e.SC4Lot:
         90c1db9e:
           bulldoze: 5
           categories: landmarks
@@ -204,7 +204,7 @@ assets:
           water: 5
           waterPollution: 1
           waterPollutionRadius: 1
-      Jeronij\JRJ Ships Compilation\Ned Lloyd\JRJ Nedlloyd02_90c204fd.SC4Lot:
+      Jeronij/JRJ Ships Compilation/Ned Lloyd/JRJ Nedlloyd02_90c204fd.SC4Lot:
         90c204fd:
           bulldoze: 5
           categories: landmarks
@@ -224,7 +224,7 @@ assets:
           water: 5
           waterPollution: 1
           waterPollutionRadius: 1
-      Jeronij\JRJ Ships Compilation\RMS Titanic\JRJ Titanic_70b5cb20.SC4Lot:
+      Jeronij/JRJ Ships Compilation/RMS Titanic/JRJ Titanic_70b5cb20.SC4Lot:
         70b5cb20:
           bulldoze: 5
           categories: landmarks
@@ -672,37 +672,37 @@ assets:
     downloads: 693
     file: SC4D_LEX_LEGACY_Jeronij Ship Pack.zip
     files:
-      - BSC\BSCProps\BSC MEGA Props - JRJ Vol01 v2.dat
-      - Jeronij\JRJ Ships Compilation\JRJ Maritime Toyama Blue\JRJ Toyama3 blue Full_30c05b68.SC4Lot
-      - Jeronij\JRJ Ships Compilation\JRJ Maritime Toyama Blue\JRJ Toyama3 blue_d0bf13e3.SC4Lot
-      - Jeronij\JRJ Ships Compilation\JRJ Maritime Toyama Green\JRJ Toyama3 Green Full_30c052e8.SC4Lot
-      - Jeronij\JRJ Ships Compilation\JRJ Maritime Toyama Green\JRJ Toyama3 Green_f0bf0dab.SC4Lot
-      - Jeronij\JRJ Ships Compilation\JRJ Maritime Toyama Red\JRJ Toyama3 red Full_d0c05314.SC4Lot
-      - Jeronij\JRJ Ships Compilation\JRJ Maritime Toyama Red\JRJ Toyama3 red_d0bf0a44.SC4Lot
-      - Jeronij\JRJ Ships Compilation\JRJ Maritime Toyama Yellow\JRJ Toyama3 yellow Full_f0c045df.SC4Lot
-      - Jeronij\JRJ Ships Compilation\JRJ Maritime Toyama Yellow\JRJ Toyama3 yellow_d0bf0413.SC4Lot
-      - Jeronij\JRJ Ships Compilation\Juan J. Sister\JRJ Sister_90be0bd3.SC4Lot
-      - Jeronij\JRJ Ships Compilation\Ned Lloyd\JRJ Nedlloyd01_90c1db9e.SC4Lot
-      - Jeronij\JRJ Ships Compilation\Ned Lloyd\JRJ Nedlloyd02_90c204fd.SC4Lot
-      - Jeronij\JRJ Ships Compilation\RMS Titanic\JRJ Titanic_70b5cb20.SC4Lot
-      - ~Documents\Jeronij_Readmes\JRJ_Ships_Ned_Lloyd_readme.html
-      - ~Documents\Jeronij_Readmes\images\JRJ_Ships_JJSister.jpg
-      - ~Documents\Jeronij_Readmes\images\JRJ_Ships_NedLloyd.jpg
-      - ~Documents\Jeronij_Readmes\images\JRJ_Ships_Titanic.jpg
-      - ~Documents\Jeronij_Readmes\images\JRJ_Ships_Toyama_blue.jpg
-      - ~Documents\Jeronij_Readmes\images\JRJ_Ships_Toyama_green.jpg
-      - ~Documents\Jeronij_Readmes\images\JRJ_Ships_Toyama_red.jpg
-      - ~Documents\Jeronij_Readmes\images\JRJ_Ships_Toyama_yellow.jpg
-      - ~Documents\Jeronij_Readmes\images\Logo_eurobold_204x20.jpg
-      - ~Documents\Prop-Texture Catalogue Index and Cleanitol\BSC MEGA Props - JRJ Vol01 v2-index.jpg
-      - ~Documents\Prop-Texture Catalogue Index and Cleanitol\Cleanitol_JRJ Ships Compilation.txt
+      - BSC/BSCProps/BSC MEGA Props - JRJ Vol01 v2.dat
+      - Jeronij/JRJ Ships Compilation/JRJ Maritime Toyama Blue/JRJ Toyama3 blue Full_30c05b68.SC4Lot
+      - Jeronij/JRJ Ships Compilation/JRJ Maritime Toyama Blue/JRJ Toyama3 blue_d0bf13e3.SC4Lot
+      - Jeronij/JRJ Ships Compilation/JRJ Maritime Toyama Green/JRJ Toyama3 Green Full_30c052e8.SC4Lot
+      - Jeronij/JRJ Ships Compilation/JRJ Maritime Toyama Green/JRJ Toyama3 Green_f0bf0dab.SC4Lot
+      - Jeronij/JRJ Ships Compilation/JRJ Maritime Toyama Red/JRJ Toyama3 red Full_d0c05314.SC4Lot
+      - Jeronij/JRJ Ships Compilation/JRJ Maritime Toyama Red/JRJ Toyama3 red_d0bf0a44.SC4Lot
+      - Jeronij/JRJ Ships Compilation/JRJ Maritime Toyama Yellow/JRJ Toyama3 yellow Full_f0c045df.SC4Lot
+      - Jeronij/JRJ Ships Compilation/JRJ Maritime Toyama Yellow/JRJ Toyama3 yellow_d0bf0413.SC4Lot
+      - Jeronij/JRJ Ships Compilation/Juan J. Sister/JRJ Sister_90be0bd3.SC4Lot
+      - Jeronij/JRJ Ships Compilation/Ned Lloyd/JRJ Nedlloyd01_90c1db9e.SC4Lot
+      - Jeronij/JRJ Ships Compilation/Ned Lloyd/JRJ Nedlloyd02_90c204fd.SC4Lot
+      - Jeronij/JRJ Ships Compilation/RMS Titanic/JRJ Titanic_70b5cb20.SC4Lot
+      - ~Documents/Jeronij_Readmes/JRJ_Ships_Ned_Lloyd_readme.html
+      - ~Documents/Jeronij_Readmes/images/JRJ_Ships_JJSister.jpg
+      - ~Documents/Jeronij_Readmes/images/JRJ_Ships_NedLloyd.jpg
+      - ~Documents/Jeronij_Readmes/images/JRJ_Ships_Titanic.jpg
+      - ~Documents/Jeronij_Readmes/images/JRJ_Ships_Toyama_blue.jpg
+      - ~Documents/Jeronij_Readmes/images/JRJ_Ships_Toyama_green.jpg
+      - ~Documents/Jeronij_Readmes/images/JRJ_Ships_Toyama_red.jpg
+      - ~Documents/Jeronij_Readmes/images/JRJ_Ships_Toyama_yellow.jpg
+      - ~Documents/Jeronij_Readmes/images/Logo_eurobold_204x20.jpg
+      - ~Documents/Prop-Texture Catalogue Index and Cleanitol/BSC MEGA Props - JRJ Vol01 v2-index.jpg
+      - ~Documents/Prop-Texture Catalogue Index and Cleanitol/Cleanitol_JRJ Ships Compilation.txt
     images:
       - https://www.sc4evermore.com/images/jdownloads/screenshots/thumbnails/JRJ_Ships_JJSister.jpg
       - https://www.sc4evermore.com/images/jdownloads/screenshots/thumbnails/JRJ_Ships_Titanic.jpg
       - https://www.sc4evermore.com/images/jdownloads/screenshots/thumbnails/JRJ_Ships_Toyama_blue.jpg
     lastModified: 2023-11-11T16:29:27.000Z
     lots:
-      Jeronij\JRJ Ships Compilation\JRJ Maritime Toyama Blue\JRJ Toyama3 blue Full_30c05b68.SC4Lot:
+      Jeronij/JRJ Ships Compilation/JRJ Maritime Toyama Blue/JRJ Toyama3 blue Full_30c05b68.SC4Lot:
         30c05b68:
           building: 30c05b68
           name: JRJ Toyama3 blue Full
@@ -711,7 +711,7 @@ assets:
           size: 10x1
           textures:
             - 25f40000
-      Jeronij\JRJ Ships Compilation\JRJ Maritime Toyama Blue\JRJ Toyama3 blue_d0bf13e3.SC4Lot:
+      Jeronij/JRJ Ships Compilation/JRJ Maritime Toyama Blue/JRJ Toyama3 blue_d0bf13e3.SC4Lot:
         d0bf13e3:
           building: d0bf13e3
           name: JRJ Toyama3 blue
@@ -720,7 +720,7 @@ assets:
           size: 10x1
           textures:
             - 25f40000
-      Jeronij\JRJ Ships Compilation\JRJ Maritime Toyama Green\JRJ Toyama3 Green Full_30c052e8.SC4Lot:
+      Jeronij/JRJ Ships Compilation/JRJ Maritime Toyama Green/JRJ Toyama3 Green Full_30c052e8.SC4Lot:
         30c052e8:
           building: 30c052e8
           name: JRJ Toyama3 Green Full
@@ -729,7 +729,7 @@ assets:
           size: 10x1
           textures:
             - 25f40000
-      Jeronij\JRJ Ships Compilation\JRJ Maritime Toyama Green\JRJ Toyama3 Green_f0bf0dab.SC4Lot:
+      Jeronij/JRJ Ships Compilation/JRJ Maritime Toyama Green/JRJ Toyama3 Green_f0bf0dab.SC4Lot:
         f0bf0dab:
           building: f0bf0dab
           name: JRJ Toyama3 Green
@@ -738,7 +738,7 @@ assets:
           size: 10x1
           textures:
             - 25f40000
-      Jeronij\JRJ Ships Compilation\JRJ Maritime Toyama Red\JRJ Toyama3 red Full_d0c05314.SC4Lot:
+      Jeronij/JRJ Ships Compilation/JRJ Maritime Toyama Red/JRJ Toyama3 red Full_d0c05314.SC4Lot:
         d0c05314:
           building: d0c05314
           name: JRJ Toyama3 red Full
@@ -747,7 +747,7 @@ assets:
           size: 10x1
           textures:
             - 25f40000
-      Jeronij\JRJ Ships Compilation\JRJ Maritime Toyama Red\JRJ Toyama3 red_d0bf0a44.SC4Lot:
+      Jeronij/JRJ Ships Compilation/JRJ Maritime Toyama Red/JRJ Toyama3 red_d0bf0a44.SC4Lot:
         d0bf0a44:
           building: d0bf0a44
           name: JRJ Toyama3 red
@@ -756,7 +756,7 @@ assets:
           size: 10x1
           textures:
             - 25f40000
-      Jeronij\JRJ Ships Compilation\JRJ Maritime Toyama Yellow\JRJ Toyama3 yellow Full_f0c045df.SC4Lot:
+      Jeronij/JRJ Ships Compilation/JRJ Maritime Toyama Yellow/JRJ Toyama3 yellow Full_f0c045df.SC4Lot:
         f0c045df:
           building: f0c045df
           name: JRJ Toyama3 yellow Full
@@ -765,7 +765,7 @@ assets:
           size: 10x1
           textures:
             - 25f40000
-      Jeronij\JRJ Ships Compilation\JRJ Maritime Toyama Yellow\JRJ Toyama3 yellow_d0bf0413.SC4Lot:
+      Jeronij/JRJ Ships Compilation/JRJ Maritime Toyama Yellow/JRJ Toyama3 yellow_d0bf0413.SC4Lot:
         d0bf0413:
           building: d0bf0413
           name: JRJ Toyama3 yellow
@@ -774,7 +774,7 @@ assets:
           size: 10x1
           textures:
             - 25f40000
-      Jeronij\JRJ Ships Compilation\Juan J. Sister\JRJ Sister_90be0bd3.SC4Lot:
+      Jeronij/JRJ Ships Compilation/Juan J. Sister/JRJ Sister_90be0bd3.SC4Lot:
         90be0bd3:
           building: 90be0bd3
           name: JRJ Sister
@@ -783,7 +783,7 @@ assets:
           size: 3x1
           textures:
             - 25f40000
-      Jeronij\JRJ Ships Compilation\Ned Lloyd\JRJ Nedlloyd01_90c1db9e.SC4Lot:
+      Jeronij/JRJ Ships Compilation/Ned Lloyd/JRJ Nedlloyd01_90c1db9e.SC4Lot:
         90c1db9e:
           building: 90c1db9e
           name: JRJ Nedlloyd01
@@ -792,7 +792,7 @@ assets:
           size: 5x1
           textures:
             - 25f40000
-      Jeronij\JRJ Ships Compilation\Ned Lloyd\JRJ Nedlloyd02_90c204fd.SC4Lot:
+      Jeronij/JRJ Ships Compilation/Ned Lloyd/JRJ Nedlloyd02_90c204fd.SC4Lot:
         90c204fd:
           building: 90c204fd
           name: JRJ Nedlloyd02
@@ -801,7 +801,7 @@ assets:
           size: 5x1
           textures:
             - 25f40000
-      Jeronij\JRJ Ships Compilation\RMS Titanic\JRJ Titanic_70b5cb20.SC4Lot:
+      Jeronij/JRJ Ships Compilation/RMS Titanic/JRJ Titanic_70b5cb20.SC4Lot:
         70b5cb20:
           building: 70b5cb20
           name: JRJ Titanic
@@ -813,7 +813,7 @@ assets:
       version: 1
     name: SC4D LEX LEGACY - Jeronij Ship Pack
     props:
-      BSC\BSCProps\BSC MEGA Props - JRJ Vol01 v2.dat:
+      BSC/BSCProps/BSC MEGA Props - JRJ Vol01 v2.dat:
         15699a1a:
           name: JRJ_V_Toyama_Ship_RedTimed
         50be0b56:
