--- a/src/scripts/data/assets/sc4evermore/21-other.yaml
+++ b/src/scripts/data/assets/sc4evermore/21-other.yaml
@@ -33,7 +33,7 @@ assets:
     authors:
       - sc4evermore
     buildings:
-      BSC\Ripplejet\Census Repository\RJ - Census_Repository_Model_and_Query_3.1.dat:
+      BSC/Ripplejet/Census Repository/RJ - Census_Repository_Model_and_Query_3.1.dat:
         0dd41d65:
           bulldoze: 100
           categories: rewards
@@ -66,7 +66,7 @@ assets:
           water: 150
           waterPollution: 2
           waterPollutionRadius: 2
-      BSC\Ripplejet\Census Repository\RW_2x2_Census Repository Vault.SC4Lot:
+      BSC/Ripplejet/Census Repository/RW_2x2_Census Repository Vault.SC4Lot:
         645e467b:
           bulldoze: 1500
           categories: rewards
@@ -88,7 +88,7 @@ assets:
           water: 8
           waterPollution: 1
           waterPollutionRadius: 4
-      BSC\Ripplejet\Census Repository\RW_3x1_Census Repository Facility_ZP_ULTRA.SC4Lot:
+      BSC/Ripplejet/Census Repository/RW_3x1_Census Repository Facility_ZP_ULTRA.SC4Lot:
         6471f58b:
           bulldoze: 9000
           categories: rewards
@@ -123,7 +123,7 @@ assets:
           water: 84
           waterPollution: 3
           waterPollutionRadius: 4
-      _Documents\BSC_Readmes\RippleJet\_Census Repository___CHOOSE ONE --- SEE README!!!\RW_3x1_Census Repository Facility_ZP_HIGH.SC4Lot:
+      _Documents/BSC_Readmes/RippleJet/_Census Repository___CHOOSE ONE --- SEE README!!!/RW_3x1_Census Repository Facility_ZP_HIGH.SC4Lot:
         6471f58b:
           bulldoze: 9000
           categories: rewards
@@ -158,7 +158,7 @@ assets:
           water: 84
           waterPollution: 3
           waterPollutionRadius: 4
-      _Documents\BSC_Readmes\RippleJet\_Census Repository___CHOOSE ONE --- SEE README!!!\RW_3x1_Census Repository Facility_ZP_LOW.SC4Lot:
+      _Documents/BSC_Readmes/RippleJet/_Census Repository___CHOOSE ONE --- SEE README!!!/RW_3x1_Census Repository Facility_ZP_LOW.SC4Lot:
         6471f58b:
           bulldoze: 9000
           categories: rewards
@@ -193,7 +193,7 @@ assets:
           water: 84
           waterPollution: 3
           waterPollutionRadius: 4
-      _Documents\BSC_Readmes\RippleJet\_Census Repository___CHOOSE ONE --- SEE README!!!\RW_3x1_Census Repository Facility_ZP_MEDIUM.SC4Lot:
+      _Documents/BSC_Readmes/RippleJet/_Census Repository___CHOOSE ONE --- SEE README!!!/RW_3x1_Census Repository Facility_ZP_MEDIUM.SC4Lot:
         6471f58b:
           bulldoze: 9000
           categories: rewards
@@ -228,7 +228,7 @@ assets:
           water: 84
           waterPollution: 3
           waterPollutionRadius: 4
-      _Documents\BSC_Readmes\RippleJet\_Census Repository___CHOOSE ONE --- SEE README!!!\RW_3x1_Census Repository Facility_ZP_ULTRA.SC4Lot:
+      _Documents/BSC_Readmes/RippleJet/_Census Repository___CHOOSE ONE --- SEE README!!!/RW_3x1_Census Repository Facility_ZP_ULTRA.SC4Lot:
         6471f58b:
           bulldoze: 9000
           categories: rewards
@@ -263,7 +263,7 @@ assets:
           water: 84
           waterPollution: 3
           waterPollutionRadius: 4
-      _Documents\BSC_Readmes\RippleJet\_Census Repository___CHOOSE ONE --- SEE README!!!\RW_3x1_Census Repository Facility_Z_CLASSIC.SC4Lot:
+      _Documents/BSC_Readmes/RippleJet/_Census Repository___CHOOSE ONE --- SEE README!!!/RW_3x1_Census Repository Facility_Z_CLASSIC.SC4Lot:
         6471f58b:
           bulldoze: 9000
           categories: rewards
@@ -699,24 +699,24 @@ assets:
     downloads: 1119
     file: BSC RJ Census Repository Facility v3.5_1831.zip
     files:
-      - BSC\Ripplejet\Census Repository\RJ - Census_Repository_Model_and_Query_3.1.dat
-      - BSC\Ripplejet\Census Repository\RW_2x2_Census Repository Vault.SC4Lot
-      - BSC\Ripplejet\Census Repository\RW_3x1_Census Repository Facility_ZP_ULTRA.SC4Lot
-      - _Documents\BSC_Readmes\RippleJet\Cleanitol_RJ_Census_Repository_Facility_v3.5.txt
-      - _Documents\BSC_Readmes\RippleJet\Readme_Census_Repository_Facility_v3.5.htm
-      - _Documents\BSC_Readmes\RippleJet\_Census Repository___CHOOSE ONE --- SEE README!!!\RW_3x1_Census Repository Facility_ZP_HIGH.SC4Lot
-      - _Documents\BSC_Readmes\RippleJet\_Census Repository___CHOOSE ONE --- SEE README!!!\RW_3x1_Census Repository Facility_ZP_LOW.SC4Lot
-      - _Documents\BSC_Readmes\RippleJet\_Census Repository___CHOOSE ONE --- SEE README!!!\RW_3x1_Census Repository Facility_ZP_MEDIUM.SC4Lot
-      - _Documents\BSC_Readmes\RippleJet\_Census Repository___CHOOSE ONE --- SEE README!!!\RW_3x1_Census Repository Facility_ZP_ULTRA.SC4Lot
-      - _Documents\BSC_Readmes\RippleJet\_Census Repository___CHOOSE ONE --- SEE README!!!\RW_3x1_Census Repository Facility_Z_CLASSIC.SC4Lot
-      - _Documents\BSC_Readmes\RippleJet\images\Census Repository Facility Day.jpg
-      - _Documents\BSC_Readmes\RippleJet\images\Census Repository Facility Night.jpg
-      - _Documents\BSC_Readmes\RippleJet\images\footer.gif
-      - _Documents\BSC_Readmes\RippleJet\images\header.gif
+      - BSC/Ripplejet/Census Repository/RJ - Census_Repository_Model_and_Query_3.1.dat
+      - BSC/Ripplejet/Census Repository/RW_2x2_Census Repository Vault.SC4Lot
+      - BSC/Ripplejet/Census Repository/RW_3x1_Census Repository Facility_ZP_ULTRA.SC4Lot
+      - _Documents/BSC_Readmes/RippleJet/Cleanitol_RJ_Census_Repository_Facility_v3.5.txt
+      - _Documents/BSC_Readmes/RippleJet/Readme_Census_Repository_Facility_v3.5.htm
+      - _Documents/BSC_Readmes/RippleJet/_Census Repository___CHOOSE ONE --- SEE README!!!/RW_3x1_Census Repository Facility_ZP_HIGH.SC4Lot
+      - _Documents/BSC_Readmes/RippleJet/_Census Repository___CHOOSE ONE --- SEE README!!!/RW_3x1_Census Repository Facility_ZP_LOW.SC4Lot
+      - _Documents/BSC_Readmes/RippleJet/_Census Repository___CHOOSE ONE --- SEE README!!!/RW_3x1_Census Repository Facility_ZP_MEDIUM.SC4Lot
+      - _Documents/BSC_Readmes/RippleJet/_Census Repository___CHOOSE ONE --- SEE README!!!/RW_3x1_Census Repository Facility_ZP_ULTRA.SC4Lot
+      - _Documents/BSC_Readmes/RippleJet/_Census Repository___CHOOSE ONE --- SEE README!!!/RW_3x1_Census Repository Facility_Z_CLASSIC.SC4Lot
+      - _Documents/BSC_Readmes/RippleJet/images/Census Repository Facility Day.jpg
+      - _Documents/BSC_Readmes/RippleJet/images/Census Repository Facility Night.jpg
+      - _Documents/BSC_Readmes/RippleJet/images/footer.gif
+      - _Documents/BSC_Readmes/RippleJet/images/header.gif
     images: []
     lastModified: 2023-07-20T10:48:28.000Z
     lots:
-      BSC\Ripplejet\Census Repository\RJ - Census_Repository_Model_and_Query_3.1.dat:
+      BSC/Ripplejet/Census Repository/RJ - Census_Repository_Model_and_Query_3.1.dat:
         0dd41d65:
           building: 0dd41d65
           name: CensusRepository
@@ -736,7 +736,7 @@ assets:
           textures:
             - '258e0000'
             - 258d0000
-      BSC\Ripplejet\Census Repository\RW_2x2_Census Repository Vault.SC4Lot:
+      BSC/Ripplejet/Census Repository/RW_2x2_Census Repository Vault.SC4Lot:
         645e467b:
           building: 645e467b
           name: RW_2x2_Census Repository Vault
@@ -747,7 +747,7 @@ assets:
           size: 2x2
           textures:
             - 262c0000
-      BSC\Ripplejet\Census Repository\RW_3x1_Census Repository Facility_ZP_ULTRA.SC4Lot:
+      BSC/Ripplejet/Census Repository/RW_3x1_Census Repository Facility_ZP_ULTRA.SC4Lot:
         6471f58b:
           building: 6471f58b
           name: RW_3x1_Census Repository Facility_ZP_ULTRA
@@ -759,7 +759,7 @@ assets:
           textures:
             - 258f0000
             - '26370000'
-      _Documents\BSC_Readmes\RippleJet\_Census Repository___CHOOSE ONE --- SEE README!!!\RW_3x1_Census Repository Facility_ZP_HIGH.SC4Lot:
+      _Documents/BSC_Readmes/RippleJet/_Census Repository___CHOOSE ONE --- SEE README!!!/RW_3x1_Census Repository Facility_ZP_HIGH.SC4Lot:
         6471f58b:
           building: 6471f58b
           name: RW_3x1_Census Repository Facility_ZP_HIGH
@@ -771,7 +771,7 @@ assets:
           textures:
             - 258f0000
             - '26370000'
-      _Documents\BSC_Readmes\RippleJet\_Census Repository___CHOOSE ONE --- SEE README!!!\RW_3x1_Census Repository Facility_ZP_LOW.SC4Lot:
+      _Documents/BSC_Readmes/RippleJet/_Census Repository___CHOOSE ONE --- SEE README!!!/RW_3x1_Census Repository Facility_ZP_LOW.SC4Lot:
         6471f58b:
           building: 6471f58b
           name: RW_3x1_Census Repository Facility_ZP_LOW
@@ -783,7 +783,7 @@ assets:
           textures:
             - 258f0000
             - '26370000'
-      _Documents\BSC_Readmes\RippleJet\_Census Repository___CHOOSE ONE --- SEE README!!!\RW_3x1_Census Repository Facility_ZP_MEDIUM.SC4Lot:
+      _Documents/BSC_Readmes/RippleJet/_Census Repository___CHOOSE ONE --- SEE README!!!/RW_3x1_Census Repository Facility_ZP_MEDIUM.SC4Lot:
         6471f58b:
           building: 6471f58b
           name: RW_3x1_Census Repository Facility_ZP_MEDIUM
@@ -795,7 +795,7 @@ assets:
           textures:
             - 258f0000
             - '26370000'
-      _Documents\BSC_Readmes\RippleJet\_Census Repository___CHOOSE ONE --- SEE README!!!\RW_3x1_Census Repository Facility_ZP_ULTRA.SC4Lot:
+      _Documents/BSC_Readmes/RippleJet/_Census Repository___CHOOSE ONE --- SEE README!!!/RW_3x1_Census Repository Facility_ZP_ULTRA.SC4Lot:
         6471f58b:
           building: 6471f58b
           name: RW_3x1_Census Repository Facility_ZP_ULTRA
@@ -807,7 +807,7 @@ assets:
           textures:
             - 258f0000
             - '26370000'
-      _Documents\BSC_Readmes\RippleJet\_Census Repository___CHOOSE ONE --- SEE README!!!\RW_3x1_Census Repository Facility_Z_CLASSIC.SC4Lot:
+      _Documents/BSC_Readmes/RippleJet/_Census Repository___CHOOSE ONE --- SEE README!!!/RW_3x1_Census Repository Facility_Z_CLASSIC.SC4Lot:
         6471f58b:
           building: 6471f58b
           name: RW_3x1_Census Repository Facility_Z_CLASSIC
@@ -824,7 +824,7 @@ assets:
       version: 1
     name: BSC Census Repository Building by RippleJet
     props:
-      BSC\Ripplejet\Census Repository\RJ - Census_Repository_Model_and_Query_3.1.dat:
+      BSC/Ripplejet/Census Repository/RJ - Census_Repository_Model_and_Query_3.1.dat:
         16888cf8:
           model: 5ad0e817-5465811a-00030000
           name: Census Repository Facility
